@@ -25,3 +25,4 @@ show the video information dialog window.
 * Changed: page size to 100 for TV4 Play.se (Fixes #1313)
 * Added: duration to `single` item type (Fixes 1312)
 * Fixed: Some missing artwork in ViaFree.se (Fixes #1311)
+* Fixed: L1 Video items parsing (Fixes #1324)
